made corrections to the download link

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <section id="education" class="section education">
     <h2>Educational Background</h2>
     <p>I hold a Diploma in Secondary School Teacher Education from The International Teacher Training College, Nairobi, Kenya.</p>
-    <a class="btn-download" href="assets/MyCV.pdf" download>📄 Download My CV</a>
+    <a class="btn-download" href="./assets/cv.pdf" download>📄 Download My CV</a>
   </section>
 
   <!-- Skills Section -->
