added link to poject

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     </article>
 
     <article>
-      <h3><a href="https://github.com/McAyany/portfolio-site" target="_blank">Personal Portfolio Website</a></h3>
+      <h3><a href="https://github.com/McAyany/MyPortfolio.git" target="_blank">Personal Portfolio Website</a></h3>
       <p>Responsive site showcasing my skills, work, and interests — built with semantic HTML, CSS, and a touch of JavaScript.</p>
     </article>
   </section>
